# rtx

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  Cargo.toml  HUMANS.md  README.md
.github/workflows/: build.yml
crates/navview/: Cargo.toml
crates/navview/src/: geom.rs  gpu.rs  live.rs  main.rs  shader.wgsl
crates/rjmcp/: Cargo.toml  README.md
crates/rjmcp/src/: main.rs
crates/rtx-auditlog/: Cargo.toml
crates/rtx-auditlog/src/: lib.rs
crates/rtx-client/: Cargo.toml
crates/rtx-client/src/: main.rs
crates/rtx-ctlproto/: Cargo.toml
crates/rtx-ctlproto/src/: lib.rs
crates/rtx-demo-tool/: Cargo.toml
crates/rtx-demo-tool/src/: analysis.rs  lib.rs
crates/rtx-game/: Cargo.toml
crates/rtx-game/src/: abi.rs  arsenal.rs  assets.rs  bob.rs  buttons.rs  client.rs  combat.rs  control.rs  cvars.rs  defs.rs  demo_replay.rs  dispatch.rs  doors.rs  entity.rs  ext_field.rs  game.rs  game_command.rs  grapple.rs  host.rs  items.rs  lib.rs  math.rs  misc.rs  nav_build.rs  obituary.rs  plats.rs  player.rs  pmove_sim.rs  qphys.rs  raceline.rs  rotate.rs  server.rs  spawn.rs  spectate.rs  subs.rs  text.rs  trace.rs  triggers.rs  weapons.rs  world.rs
crates/rtx-game/src/bot/: bhop.rs  combat.rs  goals.rs  grenade.rs  hook.rs  hopsim.rs  human_profile.rs  mod.rs  model.rs  oracle.rs  par.rs  perception.rs  population.rs  prof.rs  rj.rs  state.rs  steer.rs  vigil.rs
crates/rtx-game/src/bot/combat/: aim.rs  mod.rs
crates/rtx-game/src/client/: mod.rs  movement.rs  spawn_select.rs
crates/rtx-game/src/control/: nav_edit.rs  ra_trial.rs
crates/rtx-game/src/mode/: arena.rs  ctf.rs  dm.rs  midair.rs  mod.rs  race.rs  team.rs
crates/rtx-game/src/mode/ctf/: flags.rs  mod.rs  runes.rs
crates/rtx-game/src/netclient/: adapters.rs  config.rs  download.rs  frames.rs  host.rs  mirror.rs  mod.rs  modes.rs  nq_frames.rs  nq_session.rs  pak.rs  senses.rs  session.rs  world.rs
crates/rtx-game/src/race/: markers.rs  mod.rs  routefile.rs
crates/rtx-game/src/rotate/: mod.rs  train.rs
crates/rtx-game/src/weapons/: hitscan.rs  mod.rs  projectiles.rs  select.rs  shootable_grenade.rs
crates/rtx-mcp/: Cargo.toml  README.md
crates/rtx-mcp/src/: main.rs
crates/rtx-nav/: Cargo.toml
crates/rtx-nav-view/: Cargo.toml
crates/rtx-nav-view/src/: live.rs  shader.wgsl
crates/rtx-nav/src/: bsp.rs  hazard.rs  lib.rs  math.rs  nearfield.rs  pmove.rs  qphys.rs  strafe.rs
crates/rtx-nav/src/navmesh/: geom.rs  hook.rs  jumps.rs  lod.rs  mod.rs  physics.rs  query.rs  reach.rs  rocketjump.rs  sidetable.rs  splice.rs
crates/rtx-nav/tests/: curl_cost.rs  dm3_ra_curl_coverage_probe.rs  gt_greedy_angle_probe.rs  gt_ground_accel_fidelity.rs  gt_ground_phase_calib.rs  gt_optimal_production_emission.rs  plant_rocket_jump_dm3.rs  ya_pocket_probe.rs
crates/rtx-proto/: Cargo.toml
crates/rtx-proto/examples/: probe.rs  probe_nq.rs  udptap.rs
crates/rtx-proto/src/: checksum.rs  clc.rs  crc.rs  info.rs  lib.rs  mdfour.rs  netchan.rs  oob.rs  protocol.rs  sizebuf.rs  svc.rs
crates/rtx-proto/src/nq/: chan.rs  clc.rs  connect.rs  mod.rs  protocol.rs  svc.rs
crates/rtx-proto/tests/: fixtures.rs  nq_fixtures.rs
crates/rtx-qwd-parse/: Cargo.toml
crates/rtx-qwd-parse/src/: lib.rs
crates/rtx-waypoint-check/: Cargo.toml
crates/rtx-waypoint-check/src/: botfile.rs  check.rs  ent.rs  main.rs  pak.rs  report.rs
docs/: bot-architecture.md  bots.md  curl-jumps.md  cvars.md  development.md  modes.md  movement.md  netclient.md
src/: abi.rs  anim.rs  arsenal.rs  assets.rs  bob.rs  bot.rs  bot_bhop.rs  bot_combat.rs  bot_goals.rs  bot_grenade.rs  bsp.rs  buttons.rs  client.rs  combat.rs  defs.rs  dispatch.rs  doors.rs  entity.rs  game.rs  game_command.rs  grapple.rs  hazard.rs  host.rs  items.rs  lib.rs  misc.rs  nav_build.rs  navmesh.rs  plats.rs  player.rs  pmove_sim.rs  qphys.rs  race.rs  raceline.rs  rotate.rs  server.rs  spawn.rs  spectate.rs  subs.rs  triggers.rs  (+2 more)
src/bot/: bhop.rs  combat.rs  goals.rs  grenade.rs  hook.rs  mod.rs  model.rs  perception.rs  rj.rs  state.rs
src/mode/: arena.rs  ctf.rs  ffa.rs  midair.rs  mod.rs  race.rs  team.rs
src/navmesh/: hook.rs  mod.rs  query.rs  rocketjump.rs
