[workspace]
resolver = "2"
members = ["crates/rtx-nav", "crates/rtx-proto", "crates/rtx-game", "crates/rtx-client", "crates/navview", "crates/rjmcp"]
# Plain `cargo build` / `cargo test` build only the game module, its nav core, and the wire codec —
# the viewer (and its wgpu/winit tree), the rjmcp harness bridge (its rmcp/tokio tree) and the
# network client stay out of the default build and out of CI. Build them explicitly with
# `-p navview` / `-p rjmcp` / `-p rtx-client`. `rtx-proto` is pure and fast to test, so unlike the
# client that consumes it, it rides along by default.
default-members = ["crates/rtx-nav", "crates/rtx-proto", "crates/rtx-game"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Daniel Svensson <dsvensson@gmail.com>"]

[workspace.dependencies]
# `glam` crosses the rtx-nav public API boundary (Vec3 in Bsp/NavGraph), so every crate must
# resolve the same version — single-source it here.
glam = "0.32"
binrw = "0.15"
bitflags = "2"
rayon = "1"
# Map downloads for the network client (behind rtx-game's `netclient` feature). Blocking API — the
# fetch runs on its own thread — and rustls rather than native-tls, so there's no system OpenSSL to
# find. `charset`/`http2` off: we GET a static `.bsp` and want the dependency small.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rtx-nav = { path = "crates/rtx-nav" }
rtx-proto = { path = "crates/rtx-proto" }
