[workspace]
resolver = "2"
members = ["crates/rtx-nav", "crates/rtx-proto", "crates/rtx-auditlog", "crates/rtx-ctlproto", "crates/rtx-game", "crates/rtx-client", "crates/rtx-nav-view", "crates/rtx-mcp", "crates/rtx-demo-tool"]
# Plain `cargo build` / `cargo test` build only the game module, its nav core, the wire codec, and
# the demo tool that rides on it — the viewer (and its wgpu/winit tree), the rtx-mcp harness bridge
# (its rmcp/tokio tree) and the network client stay out of the default build and out of CI. Build
# them explicitly with `-p rtx-nav-view` / `-p rtx-mcp` / `-p rtx-client`. `rtx-proto` and `rtx-demo-tool`
# are pure and fast to test, so unlike the client that consumes it, they ride along by default.
default-members = ["crates/rtx-nav", "crates/rtx-proto", "crates/rtx-auditlog", "crates/rtx-ctlproto", "crates/rtx-game", "crates/rtx-demo-tool"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Daniel Svensson <dsvensson@gmail.com>"]

# The shipped module lives or dies on the bot brain's frame budget, and its hot loops (the navmesh
# A*/Dijkstra in rtx-nav) are called from rtx-game across a crate boundary that cargo's defaults —
# no cross-crate LTO, 16 codegen units — leave un-inlined. Thin LTO plus a single codegen unit costs
# a slower release build and buys back the inlining. Deliberately *not* `panic = "abort"`: the engine
# hosts this as a dylib, and turning a panic into an instant process death takes the server with it.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.dependencies]
# `glam` crosses the rtx-nav public API boundary (Vec3 in Bsp/NavGraph), so every crate must
# resolve the same version — single-source it here.
glam = "0.32"
binrw = "0.15"
bitflags = "2"
rayon = "1"
# Map downloads for the network client (behind rtx-game's `netclient` feature). Blocking API — the
# fetch runs on its own thread — and rustls rather than native-tls, so there's no system OpenSSL to
# find. `charset`/`http2` off: we GET a static `.bsp` and want the dependency small.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rtx-nav = { path = "crates/rtx-nav" }
rtx-proto = { path = "crates/rtx-proto" }
rtx-auditlog = { path = "crates/rtx-auditlog" }
rtx-ctlproto = { path = "crates/rtx-ctlproto" }
# The MCP<->game control channel is framed msgpack of the `rtx-ctlproto` typed request/response
# schema. `serde` derives the schema; `rmp-serde` is the compact codec on both sides.
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
