# The rocket-jump tuning harness bridge: an MCP (stdio) server that puppets rtx bots through the
# game module's TCP control channel and manages the local mvdsv process. Kept out of the workspace
# default build (like navview) so plain `cargo build`/CI never pull the rmcp/tokio tree.
[package]
name = "rjmcp"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false

[[bin]]
name = "rjmcp"
path = "src/main.rs"

[dependencies]
# Official Model Context Protocol Rust SDK. `server` + `macros` for the tool router; `transport-io`
# for the stdio transport Claude Code speaks.
rmcp = { version = "2.2", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
