# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "rtx-ctlproto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_bytes = "0.11"
rmp-serde = { workspace = true }
rtx-auditlog = { workspace = true }
