[package]
name = "rtx-demo-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "rtx_demo_tool"

# The demo container is binrw-declarative framing; the messages *inside* each `dem_read` block are a
# recorded server→client packet, so `rtx-proto`'s svc parser decodes them — this crate never
# reimplements the wire protocol. Named for demos in general: only QuakeWorld `.qwd` today, but MVD
# is the same job on a different container.
[dependencies]
rtx-proto.workspace = true
binrw.workspace = true
glam.workspace = true
