[package]
name = "rtx-nav-view"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rtx-nav.workspace = true
glam.workspace = true
binrw.workspace = true
# Live overlay: speak the typed msgpack control protocol to a running game and poll the bot's route.
rtx-ctlproto.workspace = true
# wgpu is pinned to 29 (not 30) because the egui backend — egui-wgpu 0.35, the latest — depends on
# wgpu ^29; wgpu 30 wouldn't unify with it, leaving two incompatible wgpu crates at the egui boundary.
wgpu = "29"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = "0.35"
